sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: not found: value getNombresValeurs
	for (i <- getNombresValeurs()-2 to 0 by -1) {
                  ^